kubernetes/ai-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-deployment
  labels:
    app: ai-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ai-service
  template:
    metadata:
      labels:
        app: ai-service
    spec:
      containers:
        - name: ai-service
          image: ai-service:latest   # Replace with your actual image (e.g., yourname/ai-service:1.0)
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7005

      restartPolicy: Always
