kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-service
  template:
    metadata:
      labels:
        app: frontend-service
    spec:
      containers:
        - name: frontend
          # image: frontend-service:latest       # your frontend image name
          image: 723609007800.dkr.ecr.us-west-2.amazonaws.com/airbnb-images-2025:frontend
          imagePullPolicy: Always
          ports:
            - containerPort: 80
