kubernetes/owner-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: owner-deployment
  labels:
    app: owner-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: owner-service
  template:
    metadata:
      labels:
        app: owner-service
    spec:
      containers:
        - name: owner-service
          image: owner-service:latest          # or your Docker Hub image e.g. yourname/owner-service:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7003
      restartPolicy: Always
