kubernetes/property-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: property-deployment
  labels:
    app: property-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: property-service
  template:
    metadata:
      labels:
        app: property-service
    spec:
      containers:
        - name: property-service
          # image: property-service:latest        # or your Docker Hub image
          image: 723609007800.dkr.ecr.us-west-2.amazonaws.com/airbnb-images-2025:property
          imagePullPolicy: Always
          ports:
            - containerPort: 7002
      restartPolicy: Always
