kubernetes/airbnb-ingress-uploads.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airbnb-ingress-uploads
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: airbnb.local
      http:
        paths:
          - path: /uploads(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: traveler-service
                port:
                  number: 7001
