kubernetes/airbnb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airbnb-ingress-main
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    
spec:
  ingressClassName: nginx
  rules:
    - host: airbnb.local
      http:
        paths:
          - path: /traveler(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: traveler-service
                port:
                  number: 7001

          - path: /property(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: property-service
                port:
                  number: 7002

          - path: /owner(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: owner-service
                port:
                  number: 7003

          - path: /booking(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: booking-service
                port:
                  number: 7004
